--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   display: flex;
   padding-top: 10px;
 }
+.text-contains {
+  width: 90%;
+  margin-left: 50px;
+}
 #mainImage {
   max-width: 40%;
   max-height: 100vh;
@@ -28,16 +32,13 @@ h2 {
 
 .mean {
   margin: 0%;
-  padding-left: 40px;
-  padding-right: 50px;
+  padding-left: 10px;
 }
 .text {
-  padding-left: 40px;
-  padding-right: 50px;
+  padding-left: 10px;
 }
 .ref {
-  padding-left: 60px;
-  padding-right: 50px;
+  padding-right: 10px;
   text-align: right;
   font-size: smaller;
 }
@@ -71,12 +72,12 @@ h2 {
   /* Define more border colors using --color-N pattern */
 }
 :root {
-  --gradient-stop: 93%;
+  --gradient-stop: 70%;
 }
 
 .text-container2 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-2)
   );
@@ -84,7 +85,7 @@ h2 {
 
 .text-container3 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-3)
   );
@@ -92,7 +93,7 @@ h2 {
 
 .text-container4 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-4)
   );
@@ -100,7 +101,7 @@ h2 {
 
 .text-container5 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-5)
   );
@@ -108,7 +109,7 @@ h2 {
 
 .text-container6 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-6)
   );
@@ -116,7 +117,7 @@ h2 {
 
 .text-container7 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-7)
   );
@@ -124,7 +125,7 @@ h2 {
 
 .text-container8 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-8)
   );
@@ -132,7 +133,7 @@ h2 {
 
 .text-container9 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-9)
   );
@@ -140,7 +141,7 @@ h2 {
 
 .text-container10 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-10)
   );
@@ -148,7 +149,7 @@ h2 {
 
 .text-container11 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-11)
   );
@@ -156,7 +157,7 @@ h2 {
 
 .text-container12 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-12)
   );
@@ -164,7 +165,7 @@ h2 {
 
 .text-container13 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-13)
   );
@@ -172,7 +173,7 @@ h2 {
 
 .text-container14 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-14)
   );
@@ -180,7 +181,7 @@ h2 {
 
 .text-container15 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-15)
   );
@@ -188,7 +189,7 @@ h2 {
 
 .text-container16 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-16)
   );
@@ -196,7 +197,7 @@ h2 {
 
 .text-container17 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-17)
   );
@@ -204,7 +205,7 @@ h2 {
 
 .text-container18 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-18)
   );
@@ -212,7 +213,7 @@ h2 {
 
 .text-container19 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-19)
   );
@@ -220,7 +221,7 @@ h2 {
 
 .text-container20 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-20)
   );
@@ -228,7 +229,7 @@ h2 {
 
 .text-container21 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-21)
   );
@@ -236,7 +237,7 @@ h2 {
 
 .text-container22 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-22)
   );
@@ -244,7 +245,7 @@ h2 {
 
 .text-container23 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-23)
   );
@@ -252,7 +253,7 @@ h2 {
 
 .text-container24 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-24)
   );
@@ -260,7 +261,7 @@ h2 {
 
 .text-container25 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-25)
   );
@@ -268,7 +269,7 @@ h2 {
 
 .text-container26 {
   background: linear-gradient(
-    to bottom,
+    to top,
     white var(--gradient-stop),
     var(--color-26)
   );
